--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.14",
+    "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "leaflet.pm": "^2.2.0",
     "vue": "^2.6.14",
-    "vue-router": "^3.5.1",
+    "vue-router": "^2.8.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
